--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
+title:              Yangyang Luo
+bio:                'I am just who I am. 可爱希望也不失优雅。'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   yangyang
 
 # Social
 # if you don't have any of social below, comment the line.
